--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -22,8 +22,6 @@ $small-line-height: 1.6 !default;
 $spacing-unit: 30px !default;
 
 // Width of the content area
-$header-logo-container-width-max: 125px !default;
-$header-logo-container-height: 70px !default;
 // $header-height: 50px !default;
 $footer-height: 250px !default;
 
